parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CARACTER
    Rcase
    Rdefault
    Rmain
    Rnew
    Rread
    Rswitch

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> declaracion
Rule 6     instruccion -> declaracion_sinAsig
Rule 7     instruccion -> asignacion
Rule 8     instruccion -> if
Rule 9     instruccion -> break
Rule 10    instruccion -> while
Rule 11    instruccion -> tipo_incremento
Rule 12    instruccion -> for
Rule 13    instruccion -> continue
Rule 14    instruccion -> funcion
Rule 15    instruccion -> retorno
Rule 16    instruccion -> llamada
Rule 17    instruccion -> declaracion_arreglo
Rule 18    instruccion -> declaracion_arreglo2
Rule 19    instruccion -> modificar_arreglo
Rule 20    instruccion -> error errores
Rule 21    errores -> PUNTOCOMA
Rule 22    errores -> LLAVEC
Rule 23    imprimir_instr -> Rconsole PUNTO Rlog PARA imprimir_listas PARC fin_instr
Rule 24    imprimir_listas -> imprimir_listas COMA expresion
Rule 25    imprimir_listas -> expresion
Rule 26    declaracion -> Rlet ID DOSPUNTO tipo IGUAL expresion fin_instr
Rule 27    declaracion -> Rlet ID IGUAL expresion fin_instr
Rule 28    tipo -> Rnumber
Rule 29    tipo -> Rboolean
Rule 30    tipo -> Rstring
Rule 31    tipo -> Rany
Rule 32    tipo -> Rvoid
Rule 33    declaracion_sinAsig -> Rlet ID DOSPUNTO tipo fin_instr
Rule 34    declaracion_sinAsig -> Rlet ID fin_instr
Rule 35    asignacion -> ID IGUAL expresion fin_instr
Rule 36    if -> Rif PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 37    if -> Rif PARA expresion PARC LLAVEA instrucciones LLAVEC Relse LLAVEA instrucciones LLAVEC
Rule 38    if -> Rif PARA expresion PARC LLAVEA instrucciones LLAVEC Relse if
Rule 39    break -> Rbreak fin_instr
Rule 40    while -> Rwhile PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 41    tipo_incremento -> ID MASMAS fin_instr
Rule 42    tipo_incremento -> ID MENOSMENOS fin_instr
Rule 43    for -> Rfor PARA declar_asig expresion fin_instr actualizacion PARC LLAVEA instrucciones LLAVEC
Rule 44    declar_asig -> declaracion
Rule 45    declar_asig -> asignacion
Rule 46    actualizacion -> asignacion
Rule 47    actualizacion -> tipo_incremento
Rule 48    continue -> Rcontinue fin_instr
Rule 49    fin_instr -> PUNTOCOMA
Rule 50    fin_instr -> <empty>
Rule 51    funcion -> Rfunc ID PARA parametros PARC DOSPUNTO tipo LLAVEA instrucciones LLAVEC
Rule 52    funcion -> Rfunc ID PARA PARC DOSPUNTO tipo LLAVEA instrucciones LLAVEC
Rule 53    funcion -> Rfunc ID PARA parametros PARC LLAVEA instrucciones LLAVEC
Rule 54    funcion -> Rfunc ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 55    parametros -> parametros COMA parametro
Rule 56    parametros -> parametro
Rule 57    parametro -> ID DOSPUNTO tipo
Rule 58    parametro -> ID DOSPUNTO tipo lista_Dim
Rule 59    retorno -> Rreturn expresion fin_instr
Rule 60    llamada -> ID PARA parametros_llamada PARC fin_instr
Rule 61    llamada -> ID PARA PARC fin_instr
Rule 62    parametros_llamada -> parametros_llamada COMA parametro_llam
Rule 63    parametros_llamada -> parametro_llam
Rule 64    parametro_llam -> expresion
Rule 65    declaracion_arreglo -> Rlet ID DOSPUNTO tipo lista_expresiones fin_instr
Rule 66    lista_Dim -> lista_Dim CORA CORC
Rule 67    lista_Dim -> CORA CORC
Rule 68    lista_expresiones -> lista_expresiones CORA expresion CORC
Rule 69    lista_expresiones -> CORA expresion CORC
Rule 70    declaracion_arreglo2 -> Rlet ID IGUAL CORA tipo_lista CORC fin_instr
Rule 71    declaracion_arreglo2 -> Rlet ID DOSPUNTO tipo lista_Dim IGUAL CORA tipo_lista CORC fin_instr
Rule 72    declaracion_arreglo2 -> Rlet ID DOSPUNTO tipo lista_expresiones IGUAL CORA tipo_lista CORC fin_instr
Rule 73    declaracion_arreglo2 -> tipo lista_Dim ID IGUAL ID
Rule 74    tipo_lista -> d1
Rule 75    tipo_lista -> d2
Rule 76    tipo_lista -> d3
Rule 77    d1 -> d1 COMA expresion
Rule 78    d1 -> expresion
Rule 79    d2 -> d2 COMA LLAVEA d1 LLAVEC
Rule 80    d2 -> LLAVEA d1 LLAVEC
Rule 81    d3 -> d3 COMA LLAVEA d2 LLAVEC
Rule 82    d3 -> LLAVEA d2 LLAVEC
Rule 83    modificar_arreglo -> ID lista_expresiones IGUAL expresion fin_instr
Rule 84    expresion -> expresion MAS expresion
Rule 85    expresion -> expresion MENOS expresion
Rule 86    expresion -> expresion POR expresion
Rule 87    expresion -> expresion DIV expresion
Rule 88    expresion -> expresion POT expresion
Rule 89    expresion -> expresion MOD expresion
Rule 90    expresion -> expresion MENORIGUAL expresion
Rule 91    expresion -> expresion MENOR expresion
Rule 92    expresion -> expresion MAYORIGUAL expresion
Rule 93    expresion -> expresion MAYOR expresion
Rule 94    expresion -> expresion IGUALIGUAL expresion
Rule 95    expresion -> expresion DISTINTO expresion
Rule 96    expresion -> expresion AND expresion
Rule 97    expresion -> expresion OR expresion
Rule 98    expresion -> MENOS expresion
Rule 99    expresion -> NOT expresion
Rule 100   expresion -> PARA expresion PARC
Rule 101   expresion -> ENTERO
Rule 102   expresion -> DECIMAL
Rule 103   expresion -> CADENA
Rule 104   expresion -> Rtrue
Rule 105   expresion -> Rfalse
Rule 106   expresion -> ID
Rule 107   expresion -> Rnull
Rule 108   expresion -> llamada
Rule 109   expresion -> PARA tipo PARC expresion
Rule 110   expresion -> ID lista_expresiones
Rule 111   expresion -> ID PUNTO RtoFixed PARA expresion PARC
Rule 112   expresion -> ID PUNTO RtoExponential PARA expresion PARC
Rule 113   expresion -> ID PUNTO RtoString PARA PARC
Rule 114   expresion -> ID PUNTO RtoLowerCase PARA PARC
Rule 115   expresion -> ID PUNTO RtoUpperCase PARA PARC
Rule 116   expresion -> ID PUNTO Rlength PARA PARC
Rule 117   expresion -> ID PUNTO Rsplit PARA expresion PARC

Terminals, with rules where they appear

AND                  : 96
CADENA               : 103
CARACTER             : 
COMA                 : 24 55 62 77 79 81
CORA                 : 66 67 68 69 70 71 72
CORC                 : 66 67 68 69 70 71 72
DECIMAL              : 102
DISTINTO             : 95
DIV                  : 87
DOSPUNTO             : 26 33 51 52 57 58 65 71 72
ENTERO               : 101
ID                   : 26 27 33 34 35 41 42 51 52 53 54 57 58 60 61 65 70 71 72 73 73 83 106 110 111 112 113 114 115 116 117
IGUAL                : 26 27 35 70 71 72 73 83
IGUALIGUAL           : 94
LLAVEA               : 36 37 37 38 40 43 51 52 53 54 79 80 81 82
LLAVEC               : 22 36 37 37 38 40 43 51 52 53 54 79 80 81 82
MAS                  : 84
MASMAS               : 41
MAYOR                : 93
MAYORIGUAL           : 92
MENOR                : 91
MENORIGUAL           : 90
MENOS                : 85 98
MENOSMENOS           : 42
MOD                  : 89
NOT                  : 99
OR                   : 97
PARA                 : 23 36 37 38 40 43 51 52 53 54 60 61 100 109 111 112 113 114 115 116 117
PARC                 : 23 36 37 38 40 43 51 52 53 54 60 61 100 109 111 112 113 114 115 116 117
POR                  : 86
POT                  : 88
PUNTO                : 23 111 112 113 114 115 116 117
PUNTOCOMA            : 21 49
Rany                 : 31
Rboolean             : 29
Rbreak               : 39
Rcase                : 
Rconsole             : 23
Rcontinue            : 48
Rdefault             : 
Relse                : 37 38
Rfalse               : 105
Rfor                 : 43
Rfunc                : 51 52 53 54
Rif                  : 36 37 38
Rlength              : 116
Rlet                 : 26 27 33 34 65 70 71 72
Rlog                 : 23
Rmain                : 
Rnew                 : 
Rnull                : 107
Rnumber              : 28
Rread                : 
Rreturn              : 59
Rsplit               : 117
Rstring              : 30
Rswitch              : 
RtoExponential       : 112
RtoFixed             : 111
RtoLowerCase         : 114
RtoString            : 113
RtoUpperCase         : 115
Rtrue                : 104
Rvoid                : 32
Rwhile               : 40
error                : 20

Nonterminals, with rules where they appear

actualizacion        : 43
asignacion           : 7 45 46
break                : 9
continue             : 13
d1                   : 74 77 79 80
d2                   : 75 79 81 82
d3                   : 76 81
declar_asig          : 43
declaracion          : 5 44
declaracion_arreglo  : 17
declaracion_arreglo2 : 18
declaracion_sinAsig  : 6
errores              : 20
expresion            : 24 25 26 27 35 36 37 38 40 43 59 64 68 69 77 78 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 99 100 109 111 112 117
fin_instr            : 23 26 27 33 34 35 39 41 42 43 48 59 60 61 65 70 71 72 83
for                  : 12
funcion              : 14
if                   : 8 38
imprimir_instr       : 4
imprimir_listas      : 23 24
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 36 37 37 38 40 43 51 52 53 54
lista_Dim            : 58 66 71 73
lista_expresiones    : 65 68 72 83 110
llamada              : 16 108
modificar_arreglo    : 19
parametro            : 55 56
parametro_llam       : 62 63
parametros           : 51 53 55
parametros_llamada   : 60 62
retorno              : 15
tipo                 : 26 33 51 52 57 58 65 71 72 73 109
tipo_incremento      : 11 47
tipo_lista           : 70 71 72
while                : 10

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion
    (6) instruccion -> . declaracion_sinAsig
    (7) instruccion -> . asignacion
    (8) instruccion -> . if
    (9) instruccion -> . break
    (10) instruccion -> . while
    (11) instruccion -> . tipo_incremento
    (12) instruccion -> . for
    (13) instruccion -> . continue
    (14) instruccion -> . funcion
    (15) instruccion -> . retorno
    (16) instruccion -> . llamada
    (17) instruccion -> . declaracion_arreglo
    (18) instruccion -> . declaracion_arreglo2
    (19) instruccion -> . modificar_arreglo
    (20) instruccion -> . error errores
    (23) imprimir_instr -> . Rconsole PUNTO Rlog PARA imprimir_listas PARC fin_instr
    (26) declaracion -> . Rlet ID DOSPUNTO tipo IGUAL expresion fin_instr
    (27) declaracion -> . Rlet ID IGUAL expresion fin_instr
    (33) declaracion_sinAsig -> . Rlet ID DOSPUNTO tipo fin_instr
    (34) declaracion_sinAsig -> . Rlet ID fin_instr
    (35) asignacion -> . ID IGUAL expresion fin_instr
    (36) if -> . Rif PARA expresion PARC LLAVEA instrucciones LLAVEC
    (37) if -> . Rif PARA expresion PARC LLAVEA instrucciones LLAVEC Relse LLAVEA instrucciones LLAVEC
    (38) if -> . Rif PARA expresion PARC LLAVEA instrucciones LLAVEC Relse if
    (39) break -> . Rbreak fin_instr
    (40) while -> . Rwhile PARA expresion PARC LLAVEA instrucciones LLAVEC
    (41) tipo_incremento -> . ID MASMAS fin_instr
    (42) tipo_incremento -> . ID MENOSMENOS fin_instr
    (43) for -> . Rfor PARA declar_asig expresion fin_instr actualizacion PARC LLAVEA instrucciones LLAVEC
    (48) continue -> . Rcontinue fin_instr
    (51) funcion -> . Rfunc ID PARA parametros PARC DOSPUNTO tipo LLAVEA instrucciones LLAVEC
    (52) funcion -> . Rfunc ID PARA PARC DOSPUNTO tipo LLAVEA instrucciones LLAVEC
    (53) funcion -> . Rfunc ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (54) funcion -> . Rfunc ID PARA PARC LLAVEA instrucciones LLAVEC
    (59) retorno -> . Rreturn expresion fin_instr
    (60) llamada -> . ID PARA parametros_llamada PARC fin_instr
    (61) llamada -> . ID PARA PARC fin_instr
    (65) declaracion_arreglo -> . Rlet ID DOSPUNTO tipo lista_expresiones fin_instr
    (70) declaracion_arreglo2 -> . Rlet ID IGUAL CORA tipo_lista CORC fin_instr
    (71) declaracion_arreglo2 -> . Rlet ID DOSPUNTO tipo lista_Dim IGUAL CORA tipo_lista CORC fin_instr
    (72) declaracion_arreglo2 -> . Rlet ID DOSPUNTO tipo lista_expresiones IGUAL CORA tipo_lista CORC fin_instr
    (73) declaracion_arreglo2 -> . tipo lista_Dim ID IGUAL ID
    (83) modificar_arreglo -> . ID lista_expresiones IGUAL expresion fin_instr
    (28) tipo -> . Rnumber
    (29) tipo -> . Rboolean
    (30) tipo -> . Rstring
    (31) tipo -> . Rany
    (32) tipo -> . Rvoid

    error           shift and go to state 20
    Rconsole        shift and go to state 21
    Rlet            shift and go to state 22
    ID              shift and go to state 23
    Rif             shift and go to state 25
    Rbreak          shift and go to state 26
    Rwhile          shift and go to state 27
    Rfor            shift and go to state 28
    Rcontinue       shift and go to state 29
    Rfunc           shift and go to state 30
    Rreturn         shift and go to state 31
    Rnumber         shift and go to state 32
    Rboolean        shift and go to state 33
    Rstring         shift and go to state 34
    Rany            shift and go to state 35
    Rvoid           shift and go to state 36

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion                    shift and go to state 5
    declaracion_sinAsig            shift and go to state 6
    asignacion                     shift and go to state 7
    if                             shift and go to state 8
    break                          shift and go to state 9
    while                          shift and go to state 10
    tipo_incremento                shift and go to state 11
    for                            shift and go to state 12
    continue                       shift and go to state 13
    funcion                        shift and go to state 14
    retorno                        shift and go to state 15
    llamada                        shift and go to state 16
    declaracion_arreglo            shift and go to state 17
    declaracion_arreglo2           shift and go to state 18
    modificar_arreglo              shift and go to state 19
    tipo                           shift and go to state 24

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . declaracion
    (6) instruccion -> . declaracion_sinAsig
    (7) instruccion -> . asignacion
    (8) instruccion -> . if
    (9) instruccion -> . break
    (10) instruccion -> . while
    (11) instruccion -> . tipo_incremento
    (12) instruccion -> . for
    (13) instruccion -> . continue
    (14) instruccion -> . funcion
    (15) instruccion -> . retorno
    (16) instruccion -> . llamada
    (17) instruccion -> . declaracion_arreglo
    (18) instruccion -> . declaracion_arreglo2
    (19) instruccion -> . modificar_arreglo
    (20) instruccion -> . error errores
    (23) imprimir_instr -> . Rconsole PUNTO Rlog PARA imprimir_listas PARC fin_instr
    (26) declaracion -> . Rlet ID DOSPUNTO tipo IGUAL expresion fin_instr
    (27) declaracion -> . Rlet ID IGUAL expresion fin_instr
    (33) declaracion_sinAsig -> . Rlet ID DOSPUNTO tipo fin_instr
    (34) declaracion_sinAsig -> . Rlet ID fin_instr
    (35) asignacion -> . ID IGUAL expresion fin_instr
    (36) if -> . Rif PARA expresion PARC LLAVEA instrucciones LLAVEC
    (37) if -> . Rif PARA expresion PARC LLAVEA instrucciones LLAVEC Relse LLAVEA instrucciones LLAVEC
    (38) if -> . Rif PARA expresion PARC LLAVEA instrucciones LLAVEC Relse if
    (39) break -> . Rbreak fin_instr
    (40) while -> . Rwhile PARA expresion PARC LLAVEA instrucciones LLAVEC
    (41) tipo_incremento -> . ID MASMAS fin_instr
    (42) tipo_incremento -> . ID MENOSMENOS fin_instr
    (43) for -> . Rfor PARA declar_asig expresion fin_instr actualizacion PARC LLAVEA instrucciones LLAVEC
    (48) continue -> . Rcontinue fin_instr
    (51) funcion -> . Rfunc ID PARA parametros PARC DOSPUNTO tipo LLAVEA instrucciones LLAVEC
    (52) funcion -> . Rfunc ID PARA PARC DOSPUNTO tipo LLAVEA instrucciones LLAVEC
    (53) funcion -> . Rfunc ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (54) funcion -> . Rfunc ID PARA PARC LLAVEA instrucciones LLAVEC
    (59) retorno -> . Rreturn expresion fin_instr
    (60) llamada -> . ID PARA parametros_llamada PARC fin_instr
    (61) llamada -> . ID PARA PARC fin_instr
    (65) declaracion_arreglo -> . Rlet ID DOSPUNTO tipo lista_expresiones fin_instr
    (70) declaracion_arreglo2 -> . Rlet ID IGUAL CORA tipo_lista CORC fin_instr
    (71) declaracion_arreglo2 -> . Rlet ID DOSPUNTO tipo lista_Dim IGUAL CORA tipo_lista CORC fin_instr
    (72) declaracion_arreglo2 -> . Rlet ID DOSPUNTO tipo lista_expresiones IGUAL CORA tipo_lista CORC fin_instr
    (73) declaracion_arreglo2 -> . tipo lista_Dim ID IGUAL ID
    (83) modificar_arreglo -> . ID lista_expresiones IGUAL expresion fin_instr
    (28) tipo -> . Rnumber
    (29) tipo -> . Rboolean
    (30) tipo -> . Rstring
    (31) tipo -> . Rany
    (32) tipo -> . Rvoid

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 20
    Rconsole        shift and go to state 21
    Rlet            shift and go to state 22
    ID              shift and go to state 23
    Rif             shift and go to state 25
    Rbreak          shift and go to state 26
    Rwhile          shift and go to state 27
    Rfor            shift and go to state 28
    Rcontinue       shift and go to state 29
    Rfunc           shift and go to state 30
    Rreturn         shift and go to state 31
    Rnumber         shift and go to state 32
    Rboolean        shift and go to state 33
    Rstring         shift and go to state 34
    Rany            shift and go to state 35
    Rvoid           shift and go to state 36

    instruccion                    shift and go to state 37
    imprimir_instr                 shift and go to state 4
    declaracion                    shift and go to state 5
    declaracion_sinAsig            shift and go to state 6
    asignacion                     shift and go to state 7
    if                             shift and go to state 8
    break                          shift and go to state 9
    while                          shift and go to state 10
    tipo_incremento                shift and go to state 11
    for                            shift and go to state 12
    continue                       shift and go to state 13
    funcion                        shift and go to state 14
    retorno                        shift and go to state 15
    llamada                        shift and go to state 16
    declaracion_arreglo            shift and go to state 17
    declaracion_arreglo2           shift and go to state 18
    modificar_arreglo              shift and go to state 19
    tipo                           shift and go to state 24

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    Rconsole        reduce using rule 3 (instrucciones -> instruccion .)
    Rlet            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    Rif             reduce using rule 3 (instrucciones -> instruccion .)
    Rbreak          reduce using rule 3 (instrucciones -> instruccion .)
    Rwhile          reduce using rule 3 (instrucciones -> instruccion .)
    Rfor            reduce using rule 3 (instrucciones -> instruccion .)
    Rcontinue       reduce using rule 3 (instrucciones -> instruccion .)
    Rfunc           reduce using rule 3 (instrucciones -> instruccion .)
    Rreturn         reduce using rule 3 (instrucciones -> instruccion .)
    Rnumber         reduce using rule 3 (instrucciones -> instruccion .)
    Rboolean        reduce using rule 3 (instrucciones -> instruccion .)
    Rstring         reduce using rule 3 (instrucciones -> instruccion .)
    Rany            reduce using rule 3 (instrucciones -> instruccion .)
    Rvoid           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    error           reduce using rule 4 (instruccion -> imprimir_instr .)
    Rconsole        reduce using rule 4 (instruccion -> imprimir_instr .)
    Rlet            reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    Rif             reduce using rule 4 (instruccion -> imprimir_instr .)
    Rbreak          reduce using rule 4 (instruccion -> imprimir_instr .)
    Rwhile          reduce using rule 4 (instruccion -> imprimir_instr .)
    Rfor            reduce using rule 4 (instruccion -> imprimir_instr .)
    Rcontinue       reduce using rule 4 (instruccion -> imprimir_instr .)
    Rfunc           reduce using rule 4 (instruccion -> imprimir_instr .)
    Rreturn         reduce using rule 4 (instruccion -> imprimir_instr .)
    Rnumber         reduce using rule 4 (instruccion -> imprimir_instr .)
    Rboolean        reduce using rule 4 (instruccion -> imprimir_instr .)
    Rstring         reduce using rule 4 (instruccion -> imprimir_instr .)
    Rany            reduce using rule 4 (instruccion -> imprimir_instr .)
    Rvoid           reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    LLAVEC          reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> declaracion .

    error           reduce using rule 5 (instruccion -> declaracion .)
    Rconsole        reduce using rule 5 (instruccion -> declaracion .)
    Rlet            reduce using rule 5 (instruccion -> declaracion .)
    ID              reduce using rule 5 (instruccion -> declaracion .)
    Rif             reduce using rule 5 (instruccion -> declaracion .)
    Rbreak          reduce using rule 5 (instruccion -> declaracion .)
    Rwhile          reduce using rule 5 (instruccion -> declaracion .)
    Rfor            reduce using rule 5 (instruccion -> declaracion .)
    Rcontinue       reduce using rule 5 (instruccion -> declaracion .)
    Rfunc           reduce using rule 5 (instruccion -> declaracion .)
    Rreturn         reduce using rule 5 (instruccion -> declaracion .)
    Rnumber         reduce using rule 5 (instruccion -> declaracion .)
    Rboolean        reduce using rule 5 (instruccion -> declaracion .)
    Rstring         reduce using rule 5 (instruccion -> declaracion .)
    Rany            reduce using rule 5 (instruccion -> declaracion .)
    Rvoid           reduce using rule 5 (instruccion -> declaracion .)
    $end            reduce using rule 5 (instruccion -> declaracion .)
    LLAVEC          reduce using rule 5 (instruccion -> declaracion .)


state 6

    (6) instruccion -> declaracion_sinAsig .

    error           reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rconsole        reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rlet            reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    ID              reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rif             reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rbreak          reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rwhile          reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rfor            reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rcontinue       reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rfunc           reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rreturn         reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rnumber         reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rboolean        reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rstring         reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rany            reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    Rvoid           reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    $end            reduce using rule 6 (instruccion -> declaracion_sinAsig .)
    LLAVEC          reduce using rule 6 (instruccion -> declaracion_sinAsig .)


state 7

    (7) instruccion -> asignacion .

    error           reduce using rule 7 (instruccion -> asignacion .)
    Rconsole        reduce using rule 7 (instruccion -> asignacion .)
    Rlet            reduce using rule 7 (instruccion -> asignacion .)
    ID              reduce using rule 7 (instruccion -> asignacion .)
    Rif             reduce using rule 7 (instruccion -> asignacion .)
    Rbreak          reduce using rule 7 (instruccion -> asignacion .)
    Rwhile          reduce using rule 7 (instruccion -> asignacion .)
    Rfor            reduce using rule 7 (instruccion -> asignacion .)
    Rcontinue       reduce using rule 7 (instruccion -> asignacion .)
    Rfunc           reduce using rule 7 (instruccion -> asignacion .)
    Rreturn         reduce using rule 7 (instruccion -> asignacion .)
    Rnumber         reduce using rule 7 (instruccion -> asignacion .)
    Rboolean        reduce using rule 7 (instruccion -> asignacion .)
    Rstring         reduce using rule 7 (instruccion -> asignacion .)
    Rany            reduce using rule 7 (instruccion -> asignacion .)
    Rvoid           reduce using rule 7 (instruccion -> asignacion .)
    $end            reduce using rule 7 (instruccion -> asignacion .)
    LLAVEC          reduce using rule 7 (instruccion -> asignacion .)


state 8

    (8) instruccion -> if .

    error           reduce using rule 8 (instruccion -> if .)
    Rconsole        reduce using rule 8 (instruccion -> if .)
    Rlet            reduce using rule 8 (instruccion -> if .)
    ID              reduce using rule 8 (instruccion -> if .)
    Rif             reduce using rule 8 (instruccion -> if .)
    Rbreak          reduce using rule 8 (instruccion -> if .)
    Rwhile          reduce using rule 8 (instruccion -> if .)
    Rfor            reduce using rule 8 (instruccion -> if .)
    Rcontinue       reduce using rule 8 (instruccion -> if .)
    Rfunc           reduce using rule 8 (instruccion -> if .)
    Rreturn         reduce using rule 8 (instruccion -> if .)
    Rnumber         reduce using rule 8 (instruccion -> if .)
    Rboolean        reduce using rule 8 (instruccion -> if .)
    Rstring         reduce using rule 8 (instruccion -> if .)
    Rany            reduce using rule 8 (instruccion -> if .)
    Rvoid           reduce using rule 8 (instruccion -> if .)
    $end            reduce using rule 8 (instruccion -> if .)
    LLAVEC          reduce using rule 8 (instruccion -> if .)


state 9

    (9) instruccion -> break .

    error           reduce using rule 9 (instruccion -> break .)
    Rconsole        reduce using rule 9 (instruccion -> break .)
    Rlet            reduce using rule 9 (instruccion -> break .)
    ID              reduce using rule 9 (instruccion -> break .)
    Rif             reduce using rule 9 (instruccion -> break .)
    Rbreak          reduce using rule 9 (instruccion -> break .)
    Rwhile          reduce using rule 9 (instruccion -> break .)
    Rfor            reduce using rule 9 (instruccion -> break .)
    Rcontinue       reduce using rule 9 (instruccion -> break .)
    Rfunc           reduce using rule 9 (instruccion -> break .)
    Rreturn         reduce using rule 9 (instruccion -> break .)
    Rnumber         reduce using rule 9 (instruccion -> break .)
    Rboolean        reduce using rule 9 (instruccion -> break .)
    Rstring         reduce using rule 9 (instruccion -> break .)
    Rany            reduce using rule 9 (instruccion -> break .)
    Rvoid           reduce using rule 9 (instruccion -> break .)
    $end            reduce using rule 9 (instruccion -> break .)
    LLAVEC          reduce using rule 9 (instruccion -> break .)


state 10

    (10) instruccion -> while .

    error           reduce using rule 10 (instruccion -> while .)
    Rconsole        reduce using rule 10 (instruccion -> while .)
    Rlet            reduce using rule 10 (instruccion -> while .)
    ID              reduce using rule 10 (instruccion -> while .)
    Rif             reduce using rule 10 (instruccion -> while .)
    Rbreak          reduce using rule 10 (instruccion -> while .)
    Rwhile          reduce using rule 10 (instruccion -> while .)
    Rfor            reduce using rule 10 (instruccion -> while .)
    Rcontinue       reduce using rule 10 (instruccion -> while .)
    Rfunc           reduce using rule 10 (instruccion -> while .)
    Rreturn         reduce using rule 10 (instruccion -> while .)
    Rnumber         reduce using rule 10 (instruccion -> while .)
    Rboolean        reduce using rule 10 (instruccion -> while .)
    Rstring         reduce using rule 10 (instruccion -> while .)
    Rany            reduce using rule 10 (instruccion -> while .)
    Rvoid           reduce using rule 10 (instruccion -> while .)
    $end            reduce using rule 10 (instruccion -> while .)
    LLAVEC          reduce using rule 10 (instruccion -> while .)


state 11

    (11) instruccion -> tipo_incremento .

    error           reduce using rule 11 (instruccion -> tipo_incremento .)
    Rconsole        reduce using rule 11 (instruccion -> tipo_incremento .)
    Rlet            reduce using rule 11 (instruccion -> tipo_incremento .)
    ID              reduce using rule 11 (instruccion -> tipo_incremento .)
    Rif             reduce using rule 11 (instruccion -> tipo_incremento .)
    Rbreak          reduce using rule 11 (instruccion -> tipo_incremento .)
    Rwhile          reduce using rule 11 (instruccion -> tipo_incremento .)
    Rfor            reduce using rule 11 (instruccion -> tipo_incremento .)
    Rcontinue       reduce using rule 11 (instruccion -> tipo_incremento .)
    Rfunc           reduce using rule 11 (instruccion -> tipo_incremento .)
    Rreturn         reduce using rule 11 (instruccion -> tipo_incremento .)
    Rnumber         reduce using rule 11 (instruccion -> tipo_incremento .)
    Rboolean        reduce using rule 11 (instruccion -> tipo_incremento .)
    Rstring         reduce using rule 11 (instruccion -> tipo_incremento .)
    Rany            reduce using rule 11 (instruccion -> tipo_incremento .)
    Rvoid           reduce using rule 11 (instruccion -> tipo_incremento .)
    $end            reduce using rule 11 (instruccion -> tipo_incremento .)
    LLAVEC          reduce using rule 11 (instruccion -> tipo_incremento .)


state 12

    (12) instruccion -> for .

    error           reduce using rule 12 (instruccion -> for .)
    Rconsole        reduce using rule 12 (instruccion -> for .)
    Rlet            reduce using rule 12 (instruccion -> for .)
    ID              reduce using rule 12 (instruccion -> for .)
    Rif             reduce using rule 12 (instruccion -> for .)
    Rbreak          reduce using rule 12 (instruccion -> for .)
    Rwhile          reduce using rule 12 (instruccion -> for .)
    Rfor            reduce using rule 12 (instruccion -> for .)
    Rcontinue       reduce using rule 12 (instruccion -> for .)
    Rfunc           reduce using rule 12 (instruccion -> for .)
    Rreturn         reduce using rule 12 (instruccion -> for .)
    Rnumber         reduce using rule 12 (instruccion -> for .)
    Rboolean        reduce using rule 12 (instruccion -> for .)
    Rstring         reduce using rule 12 (instruccion -> for .)
    Rany            reduce using rule 12 (instruccion -> for .)
    Rvoid           reduce using rule 12 (instruccion -> for .)
    $end            reduce using rule 12 (instruccion -> for .)
    LLAVEC          reduce using rule 12 (instruccion -> for .)


state 13

    (13) instruccion -> continue .
